# pyproject.toml

```toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-special-effect"
version = "1.0.0"
description = "An application that applies special effects to real-time video using PyQt5 and OpenCV."
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]

[project.dependencies]
PyQt5 = "^5.15.10"
opencv-python = "^4.5"

[tool.pyinstaller]
scripts = ["main.py"]
